--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Basketball Score Board</title>
-    <script src="basketball.js" defer></script>
-    <link rel="stylesheet" href="basketball.css">
+    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -34,4 +34,5 @@
         </div>
     </section>
 </body>
+
 </html>
