--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
 
         <div class="guest">
-            <h2>GUEST</h2>
+            <h2 class="awaytag">GUEST</h2>
             <h1 id="awayScore">0</h1>
             <div>
                 <button id="onealt" onclick="onealt()">+1</button>
